--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 :root{
     --red:red;
+    --yellow: rgb(255, 255, 0);
 }
 
 *{
@@ -75,8 +76,21 @@ section{
     color:#fff;
 }
 
+.footer{
+    text-align: center;
+    margin:0 6rem;
+    font-size: 4rem;
+    padding:1rem;
+    border-bottom: .1rem solid #fff4;
+    color:rgb(255, 255, 255);
+}
+
 .heading span{
     color:var(--red);
+}
+
+.footer span{
+    color: var(--yellow);
 }
 
 header{
@@ -226,7 +240,7 @@ header .navbar ul li a:hover{
     color:#fff;
 }
 
-.education .box-container{
+.stats .box-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -235,7 +249,7 @@ header .navbar ul li a:hover{
     padding-left: 3rem;
 }
 
-.education .box-container .box{
+.stats .box-container .box{
     width:27rem;
     margin:4rem 1rem;
     padding-left: 4rem;
@@ -243,7 +257,7 @@ header .navbar ul li a:hover{
     position: relative;
 }
 
-.education .box-container .box span{
+.stats .box-container .box span{
     font-size: 1.3rem;
     background:#222;
     color:#fff;
@@ -251,19 +265,19 @@ header .navbar ul li a:hover{
     padding:.5rem 2.5rem;
 }
 
-.education .box-container .box h3{
+.stats .box-container .box h3{
     font-size: 2rem;
     color:#fff;
     padding-top: 1.5rem;
 }
 
-.education .box-container .box p{
+.stats .box-container .box p{
     font-size: 1.4rem;
     color:#eee;
     padding: 1rem 0;
 }
 
-.education .box-container .box i{
+.stats .box-container .box i{
     position: absolute;
     top:-1.5rem; left:-2.5rem;
     height:5rem;
@@ -275,24 +289,24 @@ header .navbar ul li a:hover{
     color:#fff;
     background:var(--red);
 }
-.education a{
+.stats a{
     color: yellow;
     text-decoration: none;
 }
-.education a:hover{
+.stats a:hover{
     color: var(--red);
     text-decoration: none;
 }
-.education button{
+.stats button{
     cursor: pointer;
     background: none;
     color: yellow;
 }
-.education button:hover{
+.stats button:hover{
     color: var(--red);
 }
 
-.portfolio .box-container{
+.profiles .box-container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -300,7 +314,7 @@ header .navbar ul li a:hover{
     padding:2rem 0;
 }
 
-.portfolio .box-container .box{
+.profiles .box-container .box{
     height: 20rem;
     width:26rem;
     border-radius: 1rem;
@@ -310,13 +324,13 @@ header .navbar ul li a:hover{
     cursor: pointer;
 }
 
-.portfolio .box-container .box img{
+.profiles .box-container .box img{
     height:100%;
     width:100%;
     object-fit: cover;
 }
 
-.portfolio .box-container .box:hover img{
+.profiles .box-container .box:hover img{
     transform: scale(1.2);
 }
 
@@ -380,13 +394,6 @@ header .navbar ul li a:hover{
     color:var(--red);
 }
 
-.top{
-    position: fixed;
-    bottom:7.5rem; right: 2rem;
-    z-index: 100;
-    display: none;
-}
-
 
 
 
@@ -438,7 +445,7 @@ header .navbar ul li a:hover{
         width: 100vw;
     }
 
-    .heading{
+    .heading, .footer{
         margin:0 3rem;
     }
 
@@ -446,11 +453,11 @@ header .navbar ul li a:hover{
         width: 100%;
     }
  
-    .education .box-container .box{
+    .stats .box-container .box{
         width:100%;
     }
 
-    .portfolio .box-container .box{
+    .profiles .box-container .box{
         width:100%;
     }
 
